# src/RestApi/V2/Api/Order/PurchaseUnit/ShippingOptionCollection.php
@@ -1,0 +1,23 @@
+<?php declare(strict_types=1);
+/*
+ * (c) shopware AG <info@shopware.com>
+ * For the full copyright and license information, please view the LICENSE
+ * file that was distributed with this source code.
+ */
+
+namespace Swag\PayPal\RestApi\V2\Api\Order\PurchaseUnit;
+
+use Shopware\Core\Framework\Log\Package;
+use Swag\PayPal\RestApi\PayPalApiCollection;
+
+/**
+ * @extends PayPalApiCollection<ShippingOption>
+ */
+#[Package('checkout')]
+class ShippingOptionCollection extends PayPalApiCollection
+{
+    public static function getExpectedClass(): string
+    {
+        return ShippingOption::class;
+    }
+}
